or default to "primary". This change was made to bring them in line with the
Server Selection Spec. These are the affected functions:

  * mongoc_client_command
  * mongoc_client_command_simple
  * mongoc_database_command
  * mongoc_database_command_simple
  * mongoc_collection_command
  * mongoc_collection_command_simple

New functions to send maxTimeMS or any arbitrary options with findAndModify:

  * mongoc_find_and_modify_opts_set_max_time_ms
  * mongoc_find_and_modify_opts_append

New functions support language drivers (specifically the PHP and HHVM drivers)
using only the libmongoc public API:

  * mongoc_bulk_operation_get_hint
  * mongoc_client_command_simple_with_server_id
  * mongoc_client_get_server_description
  * mongoc_client_get_server_descriptions
  * mongoc_client_select_server
  * mongoc_cursor_get_limit
  * mongoc_cursor_new_from_command_reply
  * mongoc_cursor_set_limit
  * mongoc_log_trace_disable
  * mongoc_log_trace_enable
  * mongoc_server_description_ismaster
  * mongoc_server_description_type
  * mongoc_server_descriptions_destroy_all
  * mongoc_uri_get_option_as_bool
  * mongoc_uri_get_option_as_int32
  * mongoc_uri_get_option_as_utf8
  * mongoc_uri_option_is_bool
  * mongoc_uri_option_is_int32
  * mongoc_uri_option_is_utf8
  * mongoc_uri_set_auth_source
  * mongoc_uri_set_database
  * mongoc_uri_set_option_as_bool
  * mongoc_uri_set_option_as_int32
  * mongoc_uri_set_option_as_utf8
  * mongoc_uri_set_password
  * mongoc_uri_set_read_concern
  * mongoc_uri_set_read_prefs_t
  * mongoc_uri_set_username
  * mongoc_uri_set_write_concern
  * mongoc_write_concern_is_acknowledged
  * mongoc_write_concern_is_valid
  * mongoc_write_concern_journal_is_set

mongoc_client_get_database_names no longer filters out a replica set member's
"local" database.

mongoc_client_get_gridfs now ensures the proper indexes on the files and chunks
collections.

mongo-c-driver 1.3.3
====================
