@@ -136,6 +136,32 @@ background_mongoc_collection_count (void *data)
 }
 
 static void *
+background_mongoc_collection_count_with_opts (void *data)
+{
+   future_t *future = (future_t *) data;
+   future_value_t return_value;
+
+   return_value.type = future_value_int64_t_type;
+
+   future_value_set_int64_t (
+      &return_value,
+      mongoc_collection_count_with_opts (
+         future_value_get_mongoc_collection_ptr (future_get_param (future, 0)),
+         future_value_get_mongoc_query_flags_t (future_get_param (future, 1)),
+         future_value_get_const_bson_ptr (future_get_param (future, 2)),
+         future_value_get_int64_t (future_get_param (future, 3)),
+         future_value_get_int64_t (future_get_param (future, 4)),
+         future_value_get_const_bson_ptr (future_get_param (future, 5)),
+         future_value_get_const_mongoc_read_prefs_ptr (future_get_param (future, 6)),
+         future_value_get_bson_error_ptr (future_get_param (future, 7))
+      ));
+
+   future_resolve (future, return_value);
+
+   return NULL;
+}
+
+static void *
 background_mongoc_collection_find_and_modify_with_opts (void *data)
 {
    future_t *future = (future_t *) data;
@@ -179,6 +205,28 @@ background_mongoc_collection_find_and_modify (void *data)
          future_value_get_bool (future_get_param (future, 7)),
          future_value_get_bson_ptr (future_get_param (future, 8)),
          future_value_get_bson_error_ptr (future_get_param (future, 9))
+      ));
+
+   future_resolve (future, return_value);
+
+   return NULL;
+}
+
+static void *
+background_mongoc_collection_stats (void *data)
+{
+   future_t *future = (future_t *) data;
+   future_value_t return_value;
+
+   return_value.type = future_value_bool_type;
+
+   future_value_set_bool (
+      &return_value,
+      mongoc_collection_stats (
+         future_value_get_mongoc_collection_ptr (future_get_param (future, 0)),
+         future_value_get_const_bson_ptr (future_get_param (future, 1)),
+         future_value_get_bson_ptr (future_get_param (future, 2)),
+         future_value_get_bson_error_ptr (future_get_param (future, 3))
       ));
 
    future_resolve (future, return_value);
@@ -628,6 +676,48 @@ future_collection_count (
 }
 
 future_t *
+future_collection_count_with_opts (
+   mongoc_collection_ptr collection,
+   mongoc_query_flags_t flags,
+   const_bson_ptr query,
+   int64_t skip,
+   int64_t limit,
+   const_bson_ptr opts,
+   const_mongoc_read_prefs_ptr read_prefs,
+   bson_error_ptr error)
+{
+   future_t *future = future_new (future_value_int64_t_type,
+                                  8);
+   
+   future_value_set_mongoc_collection_ptr (
+      future_get_param (future, 0), collection);
+   
+   future_value_set_mongoc_query_flags_t (
+      future_get_param (future, 1), flags);
+   
+   future_value_set_const_bson_ptr (
+      future_get_param (future, 2), query);
+   
+   future_value_set_int64_t (
+      future_get_param (future, 3), skip);
+   
+   future_value_set_int64_t (
+      future_get_param (future, 4), limit);
+   
+   future_value_set_const_bson_ptr (
+      future_get_param (future, 5), opts);
+   
+   future_value_set_const_mongoc_read_prefs_ptr (
+      future_get_param (future, 6), read_prefs);
+   
+   future_value_set_bson_error_ptr (
+      future_get_param (future, 7), error);
+   
+   future_start (future, background_mongoc_collection_count_with_opts);
+   return future;
+}
+
+future_t *
 future_collection_find_and_modify_with_opts (
    mongoc_collection_ptr collection,
    const_bson_ptr query,
@@ -704,6 +794,32 @@ future_collection_find_and_modify (
       future_get_param (future, 9), error);
    
    future_start (future, background_mongoc_collection_find_and_modify);
+   return future;
+}
+
+future_t *
+future_collection_stats (
+   mongoc_collection_ptr collection,
+   const_bson_ptr options,
+   bson_ptr stats,
+   bson_error_ptr error)
+{
+   future_t *future = future_new (future_value_bool_type,
+                                  4);
+   
+   future_value_set_mongoc_collection_ptr (
+      future_get_param (future, 0), collection);
+   
+   future_value_set_const_bson_ptr (
+      future_get_param (future, 1), options);
+   
+   future_value_set_bson_ptr (
+      future_get_param (future, 2), stats);
+   
+   future_value_set_bson_error_ptr (
+      future_get_param (future, 3), error);
+   
+   future_start (future, background_mongoc_collection_stats);
    return future;
 }
 
